# Auto-WSGR

./: .gitignore  .pre-commit-config.yaml  .sourcery.yaml  8-1.yaml  LICENSE  MANIFEST.in  README.md  ReadMe.md  debuger.py  develop_install.bat  example.py  pyproject.toml  requirements.txt  run.py  setup.py  system_test.py  useful.txt  user_settings.yaml  version.txt  wsgr.py
.github/workflows/: python-publish.yml
AutoWSGR/: __init__.py  daily_api.py  main.py
AutoWSGR/c_src/: locator.cpp  recognize_enemy.cpp
AutoWSGR/constants/: __init__.py  colors.py  custom_exceptions.py  data_roots.py  image_templates.py  other_constants.py  positions.py  settings.py  ui.py
AutoWSGR/controller/: android_controller.py  emulator.py  run_timer.py  windows_controller.py
AutoWSGR/data/: default_settings.yaml  default_settings_debug.yaml  default_ship_names.yaml
AutoWSGR/fight/: __init__.py  battle.py  common.py  decisive_battle.py  exercise.py  normal_fight.py
AutoWSGR/game/: game_operation.py  get_game_info.py
AutoWSGR/ocr/: digit.py  (+2 more)
autowsgr/: __init__.py
docs/: spelling_wordlist.txt
documentation/: FAQ.md  任务调度功能简介.md  使用说明.md  推图类型活动.md  特混突袭.md  舰队问答类型活动.md
examples/: 20240930event.bat  auto_daily.py  battle.py  build.py  cook.py  custom_event_2024_0930.py  daily_example.py  decisive_battle.py  event.py  event_20230613.py  event_20230809.py  event_20230927.py  event_example.py  exercise.py  fight_task.py  fight_task_example.yaml  manual_daily.py  more_custom_functions.py  ship_names.yaml  user_settings.yaml  user_settings_debug.yaml
other_data/: ship_name.html  ship_name_example.yaml
plans/: 6SS-U1206-map_fight.yaml  default.yaml
release/: V0.0.1.rar
source/: testwraps.py
tools/: crawler.py  default_settings_debug.yaml  get_decisive_enemy.py  map_recognize.py  test_normal_map.py  text_recognize.py
(+510 files in other folders)
