[tool.poetry]
name = "AutoWSGR"
version = "0.2.2.2"
description = "战舰少女R全家桶"
readme = "README.md"
authors = ["Phantom_Peng"]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.7"
numpy = { version = "*", python = ">=3.7,<3.11" }
opencv-python = "==4.5.4.60"
opencv-contrib-python = "==4.5.4.60"
opencv-python-headless = "==4.5.4.60"
airtest = "*"
keyboard = "*"
easyocr = "*"
streamlit = "*"
pre-commit = "*"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
