[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "autowsgr"
version = "0.0.0.1"
description = "战舰少女R全家桶"
readme = "README.md"
authors = ["Phantom_Peng"]
license = "MIT"


[tool.poetry.dependencies]
airtest = "^1.3.1"
easyocr = "^1.7.1"
inquirer = "^3.2.4"
keyboard = "^0.13.5"
matplotlib = { version = "^3.9.0", python = ">=3.9,<3.10.dev0" }
opencv-contrib-python = "4.5.4.60"
opencv-python = "4.5.4.60"
opencv-python-headless = "4.5.4.60"
pre-commit = "^3.5.0"
python = "3.9.*"
thefuzz = "^0.22.1"


[tool.poetry-version-plugin]
source = "init"


[tool.black]
line-length = 128
